@@ -55,6 +55,7 @@
 <li><a href="upsbible.html">UPS Programming Bible</a></li>
 <li><a href="win32.html">Apcupsd under Windows 98 and Windows NT</a></li>
 <li><a href="usb.html">Using Apcupsd with a USB UPS</a></li>
+<li><a href="snmp.html">Using Apcupsd with a SNMP UPS</a></li>
 <li><a href="multiUPS.html">Configuration for Controlling Multiple UPSes</a></li>
 <li><a href="batteries.html">Batteries</a></li>
 </ul>
